# LogisticRegression_CKKS

./: .gitignore  CMakeLists.txt
LS_CKKS/: CMakeLists.txt  LS_CKKS.cpp  LS_CKKS.h  LS_Inference_CKKS.cpp  LS_Inference_CKKS.h  LS_Train_CKKS.cpp
